# my-first-python-api

./: README.md  main.py  pyproject.toml  username-password-recovery-code.csv
my-first-python-api/api/: main.py
requester/: main.py
